v3.2.0 (2024-11-??)
 * The delay lines of the Echo effect can now be reversed. Various combinations
   of reversed and normal delay lines can result in interesting rhythmic
   effects.
 * The source distribution can now be compiled for LoongArch systems thanks to
   @YHStar.
 * Small performance improvements in the distortion effects.

v3.1.3 (2024-08-19)
 * Bugfix: oscillator filters will now correctly handle polyphony when one or
   more of their parameters are controlled by LFOs with amplitude envelopes
   (https://github.com/attilammagyar/js80p/issues/31).
 * Bugfix: MIDI CC helper parameters are now registered with the correct
   default values in both the FST and the VST3 plugin.
 * VST3: turn off MPE to note expression conversion during plugin
   initialization in hosts which do it by default, in order to be able to
   receive MIDI events unmodified.
 * VST3: update the SDK to 3.7.12 (build 20).

v3.1.2 (2024-07-29)
 * Bugfix: built-in presets should never overwrite oscillator tuning settings.
   (Depending on the plugin type and the host application's behavior, this
   change may only take effect in newly created projects.)
 * FST (VST 2.4): improve compatibility with hosts that use the
   "receiveVstTimeInfo" and "openCloseAnyThread" can-do queries.

v3.1.1 (2024-06-08)
 * Bugfix: make header texts on the Macro tab consistent with other UI
   elements.
 * Bugfix: export helper parameter for MIDI CC 88 and make it available as a
   controller. (Backward-compatibility is kept for host and plugin combinations
   where parameter order matters.)
 * Bugfix: fix building with GCC versions up to 14.1.0.

v3.1.0 (2024-05-27)
 * New envelope update modes make it possible to turn non-polyphonic aftertouch
   into semi-polyphonic, with either last key, oldest key, lowest key, or
   highest key priority.
 * New note handling modes allow retriggering sustained notes (rather than
   stacking them), and ignoring the sustain pedal's original interpretation so