@@ -1,0 +1,221 @@
+; A soft electric piano bathed in lo-fi reverb and tempo-synced echo, with one
+; of the delay lines going backwards, creating weird and eerie sounds,
+; especially with slow tempos and short, staccato notes. The mod wheel increases
+; the width and the intensity of the echos, aftertouch boosts them even more.
+; The pitch wheel, rather than changing the pitch of the oscillators, tweaks the
+; delay time and the modulation of the effects, resulting in various chirps and
+; sweeps.
+[js80p]
+MAMP = 1.0
+MPRT = 0.00110
+MPRD = 0.750
+MWID = 0.650
+MVOLctl = 0.582031250
+MSUB = 0.20
+MC1 = 0.8950
+MC2 = 0.5750
+MC3 = 0.5250
+MC4 = 0.5040
+MC5 = 0.50070
+MC6 = 0.50030
+MF2FRQctl = 0.589843750
+MF2Q = 0.0
+CAMPctl = 0.58593750
+CVS = 0.80
+CFLDctl = 0.718750
+CPRT = 0.00110
+CPRD = 0.750
+CDTN = 0.6250
+CWID = 0.650
+CVOLctl = 0.593750
+CDGctl = 0.718750
+CC1 = 0.660
+CC2 = 0.6150
+CC3 = 0.60
+CC4 = 0.560
+CC5 = 0.530
+CC6 = 0.5150
+CC7 = 0.510
+CC8 = 0.50750
+CC9 = 0.50150
+CC10 = 0.5010
+CF2FRQctl = 0.589843750
+CF2Q = 0.0
+EOG = 0.10
+EF1Q = 0.0
+EF2FRQ = 0.955000126359798
+EF2Q = 0.0
+ECDPT = 0.50
+ECFB = 0.30
+ECWID = 0.90
+ECHPF = 0.505791735510963
+ECHPQ = 0.0
+ECWET = 0.30
+ECDRY = 0.70
+EEDELctl = 0.550781250
+EEINV = 0.60
+EEFBctl = 0.53906250
+EEDST = 0.060
+EEDF = 0.841833448744520
+EEWIDctl = 0.542968750
+EEHPF = 0.503224561171899
+EEHPQ = 0.0
+EECRL = 0.299599999999999
+EECR = 0.01680
+EEWETctl = 0.628906250
+EEDRY = 0.50
+ERRSZctl = 0.531250
+ERRSctl = 0.53906250
+ERDST = 0.030
+ERDF = 0.800258910455960
+ERWIDctl = 0.5468750
+ERHPF = 0.571924238734379
+ERHPQ = 0.0
+ERCTH = 0.9250
+ERCRL = 0.096355451817272
+ERCR = 0.00840
+ERWETctl = 0.535156250
+ERDRY = 0.50
+EV3V = 0.70
+F1INctl = 0.50
+F1MINctl = 0.5156250
+F2MID = 1.0
+F2INctl = 0.50
+F2MIN = 1.0
+F2MAX = 0.0
+F3MID = 0.0
+F3INctl = 0.511718750
+F4INctl = 0.519531250
+F4MIN = 0.050
+F5INctl = 0.519531250
+F5MIN = 0.00150
+F5MAX = 0.010
+F6INctl = 0.50
+F6MIN = 0.700000000000001
+F6MAX = 0.349999999999999
+F7INctl = 0.605468750
+F7MINctl = 0.6250
+F7MAX = 0.119999999999999
+F7DST = 0.120
+F8INctl = 0.621093750
+F8MIN = 0.90
+F8MAX = 0.990
+F9INctl = 0.621093750
+F9MIN = 0.550
+F10INctl = 0.621093750
+F10MIN = 0.350
+F10MAX = 0.0
+F11INctl = 0.003906250
+F11MAX = 0.50
+F12INctl = 0.003906250
+F12MIN = 0.50
+F13INctl = 0.605468750
+F13MINctl = 0.613281250
+F13MAXctl = 0.61718750
+F14INctl = 0.003906250
+F14MIN = 0.050
+F14MAX = 0.10
+F14DST = 0.20
+F15INctl = 0.621093750
+F15MIN = 0.20
+F15MAX = 0.299999999999999
+F15DST = 0.10
+F16INctl = 0.50781250
+F16MIN = 0.00150
+F16MAX = 0.00030
+F17MID = 0.30
+F17INctl = 0.503906250
+F17MIN = 1.0
+F17MAX = 0.050
+F17DST = 0.20
+F18MID = 0.30
+F18INctl = 0.503906250
+F18MIN = 0.550
+F18MAX = 0.020
+F18DST = 0.30
+F19INctl = 0.50781250
+F19MIN = 0.0010
+F19MAX = 0.10
+F19DST = 0.50
+F20INctl = 0.50781250
+F20MIN = 0.10
+F20MAX = 0.0150
+F20DST = 0.10
+F21MID = 1.0
+F21INctl = 0.503906250
+F21MIN = 0.50
+F21MAX = 0.010
+F21DST = 0.150
+F22INctl = 0.503906250
+F22MIN = 0.570
+F22MAX = 0.730
+F22AMTctl = 0.714843750
+F23INctl = 0.503906250
+F23MIN = 0.80
+F23AMTctl = 0.714843750
+F24INctl = 0.50781250
+F24MIN = 0.50
+F25INctl = 0.605468750
+F25MIN = 0.150
+F25MAX = 0.60
+N1ATKctl = 0.63281250
+N1HLDctl = 0.644531250
+N1DECctl = 0.636718750
+N1SUS = 0.0
+N1RELctl = 0.64843750
+N2ATKctl = 0.63281250
+N2HLDctl = 0.644531250
+N2DECctl = 0.6406250
+N2SUS = 0.0
+N2RELctl = 0.64843750
+N3INIctl = 0.707031250
+N3ATK = 0.002433333333333
+N3PKctl = 0.71093750
+N3HLDctl = 0.644531250
+N3DECctl = 0.636718750
+N3SUSctl = 0.707031250
+N3RELctl = 0.64843750
+N3FIN = 0.530
+N4AMTctl = 0.7031250
+N4INI = 1.0
+N4SUS = 1.0
+N4FIN = 1.0
+L1FRQctl = 0.527343750
+L1PHSctl = 0.50
+L1MIN = 0.28330
+L1MAX = 0.38330
+L1AMTctl = 0.52343750
+MWAV = 1.0
+CWAV = 1.0
+CDT = 0.045454545454545
+L1WAV = 0.750
+L1CEN = 1.0
+EESYN = 1.0
+MF1LOG = 1.0
+MF2LOG = 1.0
+CF1LOG = 1.0
+CF2LOG = 1.0
+EF1LOG = 1.0
+EF2LOG = 1.0
+ECLOG = 1.0
+EELOG = 1.0
+ERLOG = 1.0
+ERTYP = 0.666666666666667
+ECTYP = 0.785714285714286
+MOIA = 0.216666666666667
+MOIS = 0.150
+COIA = 0.216666666666667
+COIS = 0.150
+N1ASH = 0.50
+N2ASH = 0.50
+N1DSH = 0.50
+N2DSH = 0.583333333333333
+N3DSH = 0.0
+N1RSH = 0.583333333333333
+N2RSH = 0.583333333333333
+N3RSH = 0.0
+F7DSH = 0.333333333333333
+F14DSH = 0.333333333333333
+F15DSH = 0.333333333333333
+F19DSH = 0.333333333333333
+EER2 = 1.0
