@@ -35,7 +35,7 @@
 namespace JS80P
 {
 
-size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 41;
+size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 42;
 
 Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
 
@@ -5332,6 +5332,227 @@ Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
             "F16DSH = 0.333333333333333\n"
             "MFX4 = 1.0\n"
             "CFX4 = 1.0\n"
+        )
+    ),
+
+    Program(
+        "Dystopiano",
+        "Prog042",
+        (
+            "[js80p]\n"
+            "MAMP = 1.0\n"
+            "MPRT = 0.00110\n"
+            "MPRD = 0.750\n"
+            "MWID = 0.650\n"
+            "MVOLctl = 0.582031250\n"
+            "MSUB = 0.20\n"
+            "MC1 = 0.8950\n"
+            "MC2 = 0.5750\n"
+            "MC3 = 0.5250\n"
+            "MC4 = 0.5040\n"
+            "MC5 = 0.50070\n"
+            "MC6 = 0.50030\n"
+            "MF2FRQctl = 0.589843750\n"
+            "MF2Q = 0.0\n"
+            "CAMPctl = 0.58593750\n"
+            "CVS = 0.80\n"
+            "CFLDctl = 0.718750\n"
+            "CPRT = 0.00110\n"
+            "CPRD = 0.750\n"
+            "CDTN = 0.6250\n"
+            "CWID = 0.650\n"
+            "CVOLctl = 0.593750\n"
+            "CDGctl = 0.718750\n"
+            "CC1 = 0.660\n"
+            "CC2 = 0.6150\n"
+            "CC3 = 0.60\n"
+            "CC4 = 0.560\n"
+            "CC5 = 0.530\n"
+            "CC6 = 0.5150\n"
+            "CC7 = 0.510\n"
+            "CC8 = 0.50750\n"
+            "CC9 = 0.50150\n"
+            "CC10 = 0.5010\n"
+            "CF2FRQctl = 0.589843750\n"
+            "CF2Q = 0.0\n"
+            "EOG = 0.10\n"
+            "EF1Q = 0.0\n"
+            "EF2FRQ = 0.955000126359798\n"
+            "EF2Q = 0.0\n"
+            "ECDPT = 0.50\n"
+            "ECFB = 0.30\n"
+            "ECWID = 0.90\n"
+            "ECHPF = 0.505791735510963\n"
+            "ECHPQ = 0.0\n"
+            "ECWET = 0.30\n"
+            "ECDRY = 0.70\n"
+            "EEDELctl = 0.550781250\n"
+            "EEINV = 0.60\n"
+            "EEFBctl = 0.53906250\n"
+            "EEDST = 0.060\n"
+            "EEDF = 0.841833448744520\n"
+            "EEWIDctl = 0.542968750\n"
+            "EEHPF = 0.503224561171899\n"
+            "EEHPQ = 0.0\n"
+            "EECRL = 0.299599999999999\n"
+            "EECR = 0.01680\n"
+            "EEWETctl = 0.628906250\n"
+            "EEDRY = 0.50\n"
+            "ERRSZctl = 0.531250\n"
+            "ERRSctl = 0.53906250\n"
+            "ERDST = 0.030\n"
+            "ERDF = 0.800258910455960\n"
+            "ERWIDctl = 0.5468750\n"
+            "ERHPF = 0.571924238734379\n"
+            "ERHPQ = 0.0\n"
+            "ERCTH = 0.9250\n"
+            "ERCRL = 0.096355451817272\n"
+            "ERCR = 0.00840\n"
+            "ERWETctl = 0.535156250\n"
+            "ERDRY = 0.50\n"
+            "EV3V = 0.70\n"
+            "F1INctl = 0.50\n"
+            "F1MINctl = 0.5156250\n"
+            "F2MID = 1.0\n"
+            "F2INctl = 0.50\n"
+            "F2MIN = 1.0\n"
+            "F2MAX = 0.0\n"
+            "F3MID = 0.0\n"
+            "F3INctl = 0.511718750\n"
+            "F4INctl = 0.519531250\n"
+            "F4MIN = 0.050\n"
+            "F5INctl = 0.519531250\n"
+            "F5MIN = 0.00150\n"
+            "F5MAX = 0.010\n"
+            "F6INctl = 0.50\n"
+            "F6MIN = 0.700000000000001\n"
+            "F6MAX = 0.349999999999999\n"
+            "F7INctl = 0.605468750\n"
+            "F7MINctl = 0.6250\n"
+            "F7MAX = 0.119999999999999\n"
+            "F7DST = 0.120\n"
+            "F8INctl = 0.621093750\n"
+            "F8MIN = 0.90\n"
+            "F8MAX = 0.990\n"
+            "F9INctl = 0.621093750\n"
+            "F9MIN = 0.550\n"
+            "F10INctl = 0.621093750\n"
+            "F10MIN = 0.350\n"
+            "F10MAX = 0.0\n"
+            "F11INctl = 0.003906250\n"
+            "F11MAX = 0.50\n"
+            "F12INctl = 0.003906250\n"
+            "F12MIN = 0.50\n"
+            "F13INctl = 0.605468750\n"
+            "F13MINctl = 0.613281250\n"
+            "F13MAXctl = 0.61718750\n"
+            "F14INctl = 0.003906250\n"
+            "F14MIN = 0.050\n"
+            "F14MAX = 0.10\n"
+            "F14DST = 0.20\n"
+            "F15INctl = 0.621093750\n"
+            "F15MIN = 0.20\n"
+            "F15MAX = 0.299999999999999\n"
+            "F15DST = 0.10\n"
+            "F16INctl = 0.50781250\n"
+            "F16MIN = 0.00150\n"
+            "F16MAX = 0.00030\n"
+            "F17MID = 0.30\n"
+            "F17INctl = 0.503906250\n"
+            "F17MIN = 1.0\n"
+            "F17MAX = 0.050\n"
+            "F17DST = 0.20\n"
+            "F18MID = 0.30\n"
+            "F18INctl = 0.503906250\n"
+            "F18MIN = 0.550\n"
+            "F18MAX = 0.020\n"
+            "F18DST = 0.30\n"
+            "F19INctl = 0.50781250\n"
+            "F19MIN = 0.0010\n"
+            "F19MAX = 0.10\n"
+            "F19DST = 0.50\n"
+            "F20INctl = 0.50781250\n"
+            "F20MIN = 0.10\n"
+            "F20MAX = 0.0150\n"
+            "F20DST = 0.10\n"
+            "F21MID = 1.0\n"
+            "F21INctl = 0.503906250\n"
+            "F21MIN = 0.50\n"
+            "F21MAX = 0.010\n"
+            "F21DST = 0.150\n"
+            "F22INctl = 0.503906250\n"
+            "F22MIN = 0.570\n"
+            "F22MAX = 0.730\n"
+            "F22AMTctl = 0.714843750\n"
+            "F23INctl = 0.503906250\n"
+            "F23MIN = 0.80\n"
+            "F23AMTctl = 0.714843750\n"
+            "F24INctl = 0.50781250\n"
+            "F24MIN = 0.50\n"
+            "F25INctl = 0.605468750\n"
+            "F25MIN = 0.150\n"
+            "F25MAX = 0.60\n"
+            "N1ATKctl = 0.63281250\n"
+            "N1HLDctl = 0.644531250\n"
+            "N1DECctl = 0.636718750\n"
+            "N1SUS = 0.0\n"
+            "N1RELctl = 0.64843750\n"
+            "N2ATKctl = 0.63281250\n"
+            "N2HLDctl = 0.644531250\n"
+            "N2DECctl = 0.6406250\n"
+            "N2SUS = 0.0\n"
+            "N2RELctl = 0.64843750\n"
+            "N3INIctl = 0.707031250\n"
+            "N3ATK = 0.002433333333333\n"
+            "N3PKctl = 0.71093750\n"
+            "N3HLDctl = 0.644531250\n"
+            "N3DECctl = 0.636718750\n"
+            "N3SUSctl = 0.707031250\n"
+            "N3RELctl = 0.64843750\n"
+            "N3FIN = 0.530\n"
+            "N4AMTctl = 0.7031250\n"
+            "N4INI = 1.0\n"
+            "N4SUS = 1.0\n"
+            "N4FIN = 1.0\n"
+            "L1FRQctl = 0.527343750\n"
+            "L1PHSctl = 0.50\n"
+            "L1MIN = 0.28330\n"
+            "L1MAX = 0.38330\n"
+            "L1AMTctl = 0.52343750\n"
+            "MWAV = 1.0\n"
+            "CWAV = 1.0\n"
+            "CDT = 0.045454545454545\n"
+            "L1WAV = 0.750\n"
+            "L1CEN = 1.0\n"
+            "EESYN = 1.0\n"
+            "MF1LOG = 1.0\n"
+            "MF2LOG = 1.0\n"
+            "CF1LOG = 1.0\n"
+            "CF2LOG = 1.0\n"
+            "EF1LOG = 1.0\n"
+            "EF2LOG = 1.0\n"
+            "ECLOG = 1.0\n"
+            "EELOG = 1.0\n"
+            "ERLOG = 1.0\n"
+            "ERTYP = 0.666666666666667\n"
+            "ECTYP = 0.785714285714286\n"
+            "MOIA = 0.216666666666667\n"
+            "MOIS = 0.150\n"
+            "COIA = 0.216666666666667\n"
+            "COIS = 0.150\n"
+            "N1ASH = 0.50\n"
+            "N2ASH = 0.50\n"
+            "N1DSH = 0.50\n"
+            "N2DSH = 0.583333333333333\n"
+            "N3DSH = 0.0\n"
+            "N1RSH = 0.583333333333333\n"
+            "N2RSH = 0.583333333333333\n"
+            "N3RSH = 0.0\n"
+            "F7DSH = 0.333333333333333\n"
+            "F14DSH = 0.333333333333333\n"
+            "F15DSH = 0.333333333333333\n"
+            "F19DSH = 0.333333333333333\n"
+            "EER2 = 1.0\n"
         )
     ),
 
