@@ -5,6 +5,8 @@ v3.2.0 (2024-11-??)
  * The source distribution can now be compiled for LoongArch systems thanks to
    @YHStar.
  * Small performance improvements in the distortion effects.
+ * New preset: Dystopiano, showcasing the weird and eerie sound of backwards
+   echos.
 
 v3.1.3 (2024-08-19)
  * Bugfix: oscillator filters will now correctly handle polyphony when one or
